completado el tutorial hasta el capitulo 14

--- a/Sistema/appsettings.json
+++ b/Sistema/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SistemaContext": "Server=DESKTOP-EH4P9RJ;Database=dbsistema;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
